--- a/css/styles.css
+++ b/css/styles.css
@@ -767,6 +767,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+    padding: 40px;
 }
 
 .modal-close-btn {
@@ -797,3 +799,153 @@ body {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* ========== Modal Window ========== */
+
+/* ========== Modal Form ========== */
+
+.feedback {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color-theme-light);
+    margin-bottom: 12px;
+}
+
+.modal-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.modal-form-input-wrapper {
+    display: block;
+    position: relative;
+}
+
+.modal-form-input {
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.17;
+    
+    letter-spacing: 0.01em;
+
+    border-color: var(--secondary-text-color-theme-light);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    width: 100%;
+    height: 40px;
+
+    padding-left: 42px;
+}
+
+.modal-form-input:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.modal-form-input-desc {
+    display: block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    
+    letter-spacing: 0.01em;
+    
+    color: var(--secondary-text-color-theme-light);
+    display: block;
+    margin-bottom: 4px;
+
+}
+
+.modal-form-field {
+    margin-bottom: 10px;
+}
+
+
+.modal-form-check-desc {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+
+    letter-spacing: 0.03em;
+    
+    color: var(--secondary-text-color-theme-light);
+}
+
+.modal-form-input-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    width: 18px;
+    height: 18px;
+    fill: var(--primary-text-color-theme-light);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus +.modal-form-input-icon {
+    fill: var(--accent-color);
+}
+
+.modal-form-message {
+    resize: none;
+    width: 100%;
+    height: 120px;
+    border-color: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 12px 16px;
+    margin-bottom: 20px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-message::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-message:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+.modal-form-check-desc::before {
+    display: block;
+    width: 16px;
+    height: 15px;
+    border: 2px solid var(--primary-text-color-theme-light);
+    content: '';
+    cursor: pointer;
+    border-radius: 2px;
+    margin-right: 10px;
+}
+
+/* .modal-form-submit {
+    font-family: var(--primary-font);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    cursor: pointer;
+    color: var(--primary-text-color-theme-dark);
+    background-color: var(--accent-color);
+    align-items: center;
+    text-align: center;
+    align-self: center;
+    
+    border-radius: 4px;
+    padding: 10px 55px;
+    width: 200px;
+    height: 50px;
+    border: solid transparent;
+    display: inline-block;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+} */
+
+
+/* ========== Modal Form ========== */
