--- a/css/styles.css
+++ b/css/styles.css
@@ -851,6 +851,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    
 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -860,6 +861,7 @@ body {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    
 }
 
 .modal {
@@ -869,7 +871,7 @@ body {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -937,7 +939,7 @@ body {
     
     letter-spacing: 0.01em;
 
-    border-color: var(--secondary-text-color-theme-light);
+    border-color: rgba(33, 33, 33, 0.2);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     width: 100%;
@@ -983,6 +985,7 @@ body {
 
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .modal-form-input-icon {
@@ -1005,6 +1008,7 @@ body {
     width: 100%;
     height: 120px;
     border-color: 1px solid rgba(33, 33, 33, 0.2);
+    border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding: 12px 16px;
     margin-bottom: 10px;
