--- a/css/styles.css
+++ b/css/styles.css
@@ -835,23 +835,20 @@ body {
     background-image: url(../images/icon/icon-send.svg);
 }
 
-/* .button-send {
-    /* display: flex;
-    justify-content: center; */
- */
+
 /* ========== Footer ========== */
 
 /* ========== Modal Window ========== */
 
 .backdrop {
     position: fixed;
-    top: 0;
     left: 0;
+    top: 0;
     z-index: 100;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
-    
+    transform: scale(1);
 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -859,7 +856,7 @@ body {
 .backdrop.is-hidden {
     transform: scale(0);
     opacity: 0;
-    visibility: hidden;
+    /* visibility: hidden; */
     pointer-events: none;
     
 }
@@ -871,12 +868,14 @@ body {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    
 
     padding: 40px;
+    
 }
 
 .modal-close-btn {
